# myip.dev

./: .gitignore  Caddyfile  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
public/: main-42987.js  main.js
src/: connect.rs  http.rs  ip.rs  main.rs  state.rs
src/ip/: as.rs  geo.rs  mod.rs
src/routes/: full.rs  ip.rs  mod.rs  raw.rs  v4.rs  v6.rs
src/templates/: full.html  ip.html  layout.html
src/whois/: cache.rs  mod.rs
