[package]
name = "myip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
dns-lookup = "2.0.2"
handlebars = "4.3.7"
lru = "0.11.0"
maxminddb = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "buffer"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
